fixed thumbnail footers overlapping and removed their links to the post

--- a/public/css/upnote.css
+++ b/public/css/upnote.css
@@ -363,8 +363,8 @@ article.post-body{
   
 }
 .thumbnail-footer{
-	position:absolute;
-	bottom:3px;
+ 
+ width:100%;
 	height:25px;
 	 
 	
